public static class StickmanAnimator
{
    public static class Params
    {
        public const string IsRunning = nameof(IsRunning);
        public const string IsCelebrating = nameof(IsCelebrating);
        public const string IsAttacking = nameof(IsAttacking);
        public const string IsArchery = nameof(IsArchery);
        public const string IsCastsSpell = nameof(IsCastsSpell);
    }
}